2001-05-27  Cyrille Chepelov  <chepelov@calixo.net>

	* lib/diagramdata.c: draw bounding boxes only if the relevant
	variable is set (as before), but also only if the rendere is
	interactive (ie, don't bother rendering bounding boxes on Postscript...)

	* lib/boundingbox.c: fixed the "pointy corners" code for polylines
	and assymmetric control beziers.

	* Makefile.am: incantations to get po/dia.pot build, as suggested
	by Hubert in #55075.
	
	* lib/ps-utf8.c: Strings in Symbol fonts were incorrectly rendered.
	Added a special case for Symbol strings, so that they're not
	re-encoded using the LN encoding (we use the bare Adobe encoding
	instead).

2001-05-26  Cyrille Chepelov  <chepelov@calixo.net>

	* lib/boundingbox.c: fixed a minor logic error wrt closed shapes. 
	The overshoot code is buggy, and the bounding boxes for polyshapes
	looks a bit cheezy. To be done ASAP.

2001-05-26  James Henstridge  <james@daa.com.au>

	* configure.in: call AM_PATH_PYTHON rather than AM_PATH_PYTHON_JH.
	This should clear up some of the build problems people have been
	having.

	* acinclude.m4: call AM_PATH_PYTHON_JH AM_PATH_PYTHON

2001-05-26  Cyrille Chepelov  <chepelov@calixo.net>

	* lib/Makefile.am:
	* lib/boundingbox.[ch] (NEW): (some) refactoring of the bounding
	box code (beginning with lines, polylines and polybeziers), into a
	more generic facility. While at it, a better shot at correctly
	computing the bounding box of a Bezieroid (should take care of
	#53424, #51233 and of course is part 1 of #52912).

	* lib/diagramdata.c: turned the RENDER_BOUNDING_BOXES conditional
	into a hidden preference (set render_bounding_boxes in diarc).
	* app/preferences.[ch]:	Added support for hidden preferences.

	* lib/geometry.[ch]: sprinkled with "const" modifiers.
	
	* lib/bezier_conn.[ch]:
	* lib/beziershape.[ch]:
	* lib/connection.[ch]:
	* lib/element.[ch]:
	* lib/poly_conn.[ch]:
	* lib/orth_conn.[ch]:
	* lib/neworth_conn.[ch]:
	* lib/polyshape.[ch]: adapted to take advantage of