@@ -1,5 +1,8 @@
 2001-05-27  Cyrille Chepelov  <chepelov@calixo.net>
 
+	* lib/text.c: enlarged a little the bounding box to account for
+	the cursor in rightmost position.
+	
 	* lib/diagramdata.c: draw bounding boxes only if the relevant
 	variable is set (as before), but also only if the rendere is
 	interactive (ie, don't bother rendering bounding boxes on Postscript...)
